--- a/package.json
+++ b/package.json
@@ -11,12 +11,9 @@
   "license": "ISC",
   "devDependencies": {
     "webpack": "^4.39.2",
-    "webpack-cli": "^3.3.7",
-    "electron": "^3.1.13",
-    "awesome-typescript-loader": "^5.2.1",
-    "typescript": "^3.5.3"
+    "webpack-cli": "^3.3.7"
   },
   "dependencies": {
-    "drivelist": "^8.0.7"
+    "bindings": "^1.5.0"
   }
 }
